O_TMPFILE is kernel >= 3.11 only
breaks non DRI decoding on platforms not providing MEMFD_CREATE
int vlc_memfd(void)
{
#ifdef HAVE_MEMFD_CREATE
int fd = memfd_create(PACKAGE_NAME"-memfd",
MFD_CLOEXEC | MFD_ALLOW_SEALING);
if (fd != -1 || errno != ENOSYS)
return fd;
#endif
return open("/tmp", O_RDWR | O_CLOEXEC | O_TMPFILE, S_IRUSR | S_IWUSR);
}